--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rx-router",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "description": "An Rx based http router",
     "author": "Joseph Moniz <joseph.moniz@gmail.com>",
     "main": "./src/index.js",
@@ -8,8 +8,9 @@
         "test": "./node_modules/.bin/mocha --recursive"
     },
     "dependencies": {
-        "rx":        "2.*.*",
-        "existence": "0.2.*"
+        "rx":             "2.*.*",
+        "rx-http-server": "0.1.*",
+        "existence":      "0.2.*"
     },
     "devDependencies": {
         "mocha": "1.9.0"
