--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
     "name": "rx-router",
-    "version": "0.2.1",
+    "version": "0.2.2",
     "description": "An Rx based http router",
     "author": "Joseph Moniz <joseph.moniz@gmail.com>",
     "main": "./src/index.js",
+    "repository": "https://github.com/JosephMoniz/rx-router",
     "scripts": {
         "test": "./node_modules/.bin/mocha --recursive"
     },
     "dependencies": {
         "rx":             "2.*.*",
         "rx-http-server": "0.1.*",
-        "existence":      "0.2.*"
+        "existence":      "1.0.*"
     },
     "devDependencies": {
         "mocha": "1.9.0"
